GNOME Bugzilla – Bug 685126
portability: fix is_on_nfs on OpenBSD
Last modified: 2012-10-01 10:53:03 UTC
Created attachment 225410 [details] [review] prefer f_fstypename over unsupported f_type on OpenBSD Hi. Under OpenBSD, the statfs structure does not support "f_type". So, use "f_fstypename" to check for NFS. Would that be alright to push? Thank you.
Review of attachment 225410 [details] [review]: Looks sane to me, please push to master and gnome-3-6 branch. Thanks!
Thank you Tomas. Pushed in both branches.