portability: fix is_on_nfs on OpenBSD

Under OpenBSD, the statfs structure does not support "f_type". So, use
"f_fstypename" to check for NFS.

https://bugzilla.gnome.org/show_bug.cgi?id=685126